--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,109 +1,44 @@
 <!-- Footer -->
 <footer class="text-center text-lg-start bg-white text-muted">
-    <!-- Section: Social media -->
-    <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
-        <!-- Left -->
-        <div class="me-5 d-none d-lg-block">
-            <span>Get connected with us on social networks:</span>
-        </div>
-        <!-- Left -->
-
-        <!-- Right -->
-        <div>
-            <a href="" class="me-4 link-secondary">
-                <i class="fab fa-facebook-f"></i>
-            </a>
-            <a href="" class="me-4 link-secondary">
-                <i class="fab fa-twitter"></i>
-            </a>
-            <a href="" class="me-4 link-secondary">
-                <i class="fab fa-google"></i>
-            </a>
-            <a href="" class="me-4 link-secondary">
-                <i class="fab fa-instagram"></i>
-            </a>
-            <a href="" class="me-4 link-secondary">
-                <i class="fab fa-linkedin"></i>
-            </a>
-            <a href="" class="me-4 link-secondary">
-                <i class="fab fa-github"></i>
-            </a>
-        </div>
-        <!-- Right -->
-    </section>
-    <!-- Section: Social media -->
 
     <!-- Section: Links  -->
     <section class="">
         <div class="container text-center text-md-start mt-5">
             <!-- Grid row -->
-            <div class="row mt-3">
-                <!-- Grid column -->
-                <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-                    <!-- Content -->
-                    <h6 class="text-uppercase fw-bold mb-4">
-                        <i class="fas fa-gem me-3 text-secondary"></i>Company name
-                    </h6>
+            <div class="row mt-3 gy-4">
+                <!-- Company Info -->
+                <div class="col-md-6 footer-info">
+                    <a href="index.html" class="logo d-flex align-items-center">
+                        <img width="70px" height="70px" th:src="@{images/logo.png}">
+                        <span>The Circle</span>
+                    </a>
                     <p>
-                        Here you can use rows and columns to organize your footer content. Lorem ipsum
-                        dolor sit amet, consectetur adipisicing elit.
+                        We are a start up to make your life easier, we  develop a modern solution to share money.
+                    </p>
+                    <blockquote>
+                        "Time is money"
+                    </blockquote>
+                </div>
+                <div class="col-md-4 ">
+                    <p>
+                        <strong>NIF:</strong>3002458203<br>
+                        <strong>STAT:</strong>46101112016010800<br>
+                        <strong>RCS:</strong>2016B00791<br>
                     </p>
                 </div>
-                <!-- Grid column -->
-
-                <!-- Grid column -->
-                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-                    <!-- Links -->
-                    <h6 class="text-uppercase fw-bold mb-4">
-                        Products
-                    </h6>
+                <!-- Contact Details -->
+                <div class="col-md-2 footer-contact text-center text-md-start" >
+                    <h4>Contact Us</h4>
                     <p>
-                        <a href="#!" class="text-reset">Angular</a>
+                        LOT IVE 7<br>
+                        TSIAZOTAFO<br>
+                        STAND N° C 403 <br>
+                        <strong>Phone:</strong> <br>
+                        +261 32 45 987 63<br>
+                        +261 34 78 952 41<br>
+                        +261 33 96 785 12<br>
+                        <strong>Email:</strong> thecircle@circle.com<br>
                     </p>
-                    <p>
-                        <a href="#!" class="text-reset">React</a>
-                    </p>
-                    <p>
-                        <a href="#!" class="text-reset">Vue</a>
-                    </p>
-                    <p>
-                        <a href="#!" class="text-reset">Laravel</a>
-                    </p>
-                </div>
-                <!-- Grid column -->
-
-                <!-- Grid column -->
-                <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-                    <!-- Links -->
-                    <h6 class="text-uppercase fw-bold mb-4">
-                        Useful links
-                    </h6>
-                    <p>
-                        <a href="#!" class="text-reset">Pricing</a>
-                    </p>
-                    <p>
-                        <a href="#!" class="text-reset">Settings</a>
-                    </p>
-                    <p>
-                        <a href="#!" class="text-reset">Orders</a>
-                    </p>
-                    <p>
-                        <a href="#!" class="text-reset">Help</a>
-                    </p>
-                </div>
-                <!-- Grid column -->
-
-                <!-- Grid column -->
-                <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-                    <!-- Links -->
-                    <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
-                    <p><i class="fas fa-home me-3 text-secondary"></i> New York, NY 10012, US</p>
-                    <p>
-                        <i class="fas fa-envelope me-3 text-secondary"></i>
-                        info@example.com
-                    </p>
-                    <p><i class="fas fa-phone me-3 text-secondary"></i> + 01 234 567 88</p>
-                    <p><i class="fas fa-print me-3 text-secondary"></i> + 01 234 567 89</p>
                 </div>
                 <!-- Grid column -->
             </div>
@@ -112,10 +47,13 @@
     </section>
     <!-- Section: Links  -->
 
+    <!-- Spacing between Company Info and Contact Details -->
+    <div class="text-center p-4"></div>
+
     <!-- Copyright -->
     <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.025);">
-        © 2021 Copyright:
-        <a class="text-reset fw-bold" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+        © 2023 The Circle. All rights reserved.
+        <a class="text-reset fw-bold" href="#">thecircle.com</a>
     </div>
     <!-- Copyright -->
 </footer>
