fix: image footer and navbar

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -9,7 +9,7 @@
                 <!-- Company Info -->
                 <div class="col-md-6 footer-info">
                     <a href="index.html" class="logo d-flex align-items-center">
-                        <img width="70px" height="70px" th:src="@{images/logo.png}">
+                        <img width="70px" height="70px" th:src="@{../images/logo.png}">
                         <span>The Circle</span>
                     </a>
                     <p>
