--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,8 +1,8 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
+<nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top" th:fragment="companyLogo">
   <div class="container-fluid">
     <!-- Navbar Brand with Logo Image -->
     <div class="navbar-brand ">
-      <img width="70px" height="70px" th:src="@{images/logo.png}">
+      <img width="70px" height="70px" th:src="@{../images/logo.png}">
 
     </div>
     <a class="navbar-brand" href="#">The Circle</a>
