--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,6 +10,7 @@
     <title>Log in</title>
 </head>
 <body class="text-center">
+<div th:insert="fragments/navbar.html :: companyLogo"></div>
 <main class="form-signin w-100 m-auto">
   <form>
     <img class="mb-4" th:src="@{images/logo.png}" alt="logo" width="150px" height="150px">
