--- a/src/main/resources/templates/info_employee.html
+++ b/src/main/resources/templates/info_employee.html
@@ -9,7 +9,7 @@
     <title>About</title>
 </head>
 <body>
-<div th:replace="fragments/navbar.html"></div>
+<div th:insert="fragments/navbar.html :: companyLogo"></div>
 <div class="container">
   <h1>About Employee</h1>
   <div class="row">
