feat: add login

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,35 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href = "styles.css" rel = "stylesheet"/>
+  <link href="styles.css" rel="stylesheet"/>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
         rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
         crossorigin="anonymous">
-    <title>Log in</title>
+  <title>Log in</title>
 </head>
 <body class="text-center">
 <div th:insert="fragments/navbar.html :: companyLogo"></div>
 <main class="form-signin w-100 m-auto">
-  <form>
+  <form th:action="@{/login}" method="post">
     <img class="mb-4" th:src="@{images/logo.png}" alt="logo" width="150px" height="150px">
     <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
+    <!-- Use the correct name attributes for form fields -->
     <div class="form-floating">
-      <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-      <label for="floatingInput">Email address</label>
+      <input type="text" class="form-control" id="floatingInput" placeholder="Username" name="username">
+      <label for="floatingInput">Username</label>
     </div>
     <div class="form-floating">
-      <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+      <input type="password" class="form-control" id="floatingPassword" placeholder="Password" name="password">
       <label for="floatingPassword">Password</label>
     </div>
+    <!-- Display an error message (if any) -->
+    <p th:if="${param.error}" class="text-danger">Invalid username or password</p>
 
-    <div class="checkbox mb-3">
-      <label>
-        <input type="checkbox" value="remember-me"> Remember me
-      </label>
-    </div>
     <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
     <p class="mt-5 mb-3 text-muted">© 2017–2022</p>
   </form>
