--- a/src/main/resources/templates/update_employee.html
+++ b/src/main/resources/templates/update_employee.html
@@ -9,7 +9,7 @@
   <title>Update Employee</title>
 </head>
 <body>
-<div th:replace="fragments/navbar.html"></div>
+<div th:insert="fragments/logout.html :: logout"></div>
 <div class="container mt-5">
   <h1>Add Employee</h1>
   <form th:action="@{/employee/save}" th:object="${employee}" method="post" enctype="multipart/form-data">
