--- a/src/main/resources/templates/employees.html
+++ b/src/main/resources/templates/employees.html
@@ -10,7 +10,7 @@
     <title>Employee List</title>
 </head>
 <body>
-<div th:insert="fragments/navbar.html :: companyLogo"></div>
+<div th:insert="fragments/logout.html :: logout"></div>
 <div class="container mt-4">
     <!-- Filter Form -->
     <form th:action="@{/employees/filter}" method="get">
