--- a/src/main/resources/templates/form_employee.html
+++ b/src/main/resources/templates/form_employee.html
@@ -9,7 +9,7 @@
     <title>Create Employee</title>
 </head>
 <body>
-<div th:insert="fragments/navbar.html :: companyLogo"></div>
+<div th:insert="fragments/logout.html :: logout"></div>
 <div class="container mt-5">
   <h1>Add Employee</h1>
   <form th:action="@{/employee/add}" th:object="${employee}" method="post" enctype="multipart/form-data">
