--- a/src/main/resources/templates/employee_filter.html
+++ b/src/main/resources/templates/employee_filter.html
@@ -2,59 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href = "styles.css" rel = "stylesheet"/>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-        rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
-        crossorigin="anonymous">
-    <title>Employee List</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href = "styles.css" rel = "stylesheet"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+          rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+          crossorigin="anonymous">
+    <title>Employee List filter</title>
 </head>
 <body>
 <div th:insert="fragments/logout.html :: logout"></div>
 <div class="container mt-4">
-    <!-- Filter Form -->
-    <form th:action="@{/employees/filter}" method="get">
-        <div class="row mb-3">
-            <div class="col-md-3">
-                <input type="text" class="form-control" name="firstname" placeholder="Firstname">
-            </div>
-            <div class="col-md-3">
-                <input type="text" class="form-control" name="lastname" placeholder="Lastname">
-            </div>
-            <div class="col-md-2">
-                <select class="form-control" name="sexe">
-                    <option value="">-- Select Sexe --</option>
-                    <option value="H">Male</option>
-                    <option value="F">Female</option>
-                </select>
-            </div>
-            <div class="col-md-3">
-                <input type="text" class="form-control" name="fonction" placeholder="Fonction">
-            </div>
-            <div class="col-md-2">
-                <label>Hire Date Start:</label>
-                <input type="date" class="form-control" name="hire_date_start">
-            </div>
-            <div class="col-md-2">
-                <label>Hire Date End:</label>
-                <input type="date" class="form-control" name="hire_date_end">
-            </div>
-            <div class="col-md-2">
-                <label>Sort By:</label>
-                <select class="form-control" name="sortDirection">
-                    <option value="ASC">ASC</option>
-                    <option value="DESC">DESC</option>
-                </select>
-            </div>
-            <div class="col-md-1 mt-3">
-                <button type="submit" class="btn btn-primary">Filter</button>
-            </div>
-            <a th:href="@{/employees}" class="btn btn-secondary col-md-1 mt-3">Clear</a>
-        </div>
-    </form>
-
-
-
     <!-- Employee Table -->
     <table class="table table-bordered table-striped">
         <thead>
@@ -107,7 +64,12 @@
 
         </tbody>
     </table>
-    <a th:href="@{/employees/export/csv}" class="btn btn-success mt-3">Export to CSV</a>
+    <a th:href="@{/employees/filter/export/csv(firstname=${firstname},
+ lastname=${lastname}, sexe=${sexe}, fonction=${fonction},
+ hire_date_start=${hire_date_start}, hire_date_end=${hire_date_end})}"
+       class="btn btn-success mt-3">Export to CSV</a>
+
+
     <div th:replace="fragments/footer.html">
         <div th:attr="company=${company}"></div>
     </div>
