fix: sort and csv

--- a/src/main/resources/templates/employee_filter.html
+++ b/src/main/resources/templates/employee_filter.html
@@ -64,9 +64,7 @@
 
         </tbody>
     </table>
-    <a th:href="@{/employees/filter/export/csv(firstname=${firstname},
- lastname=${lastname}, sexe=${sexe}, fonction=${fonction},
- hire_date_start=${hire_date_start}, hire_date_end=${hire_date_end})}"
+    <a th:href="@{/employees/filter/export/csv}"
        class="btn btn-success mt-3">Export to CSV</a>
 
 
