--- a/src/main/resources/templates/employees.html
+++ b/src/main/resources/templates/employees.html
@@ -21,6 +21,9 @@
             <div class="col-md-3">
                 <input type="text" class="form-control" name="lastname" placeholder="Lastname">
             </div>
+            <div class="col-md-3">
+                <input type="text" class="form-control" name="telephones" placeholder="telephones">
+            </div>
             <div class="col-md-2">
                 <select class="form-control" name="sexe">
                     <option value="">-- Select Sexe --</option>
